cmake_minimum_required(VERSION 3.14)
project(GeekHubProject)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(GeekHubProject
        Battleship.cpp
        Battleship.h
        BattleshipsFactory.cpp
        BattleshipsFactory.h
        Captain.cpp
        Captain.h
        CaptainFactory.cpp
        CaptainFactory.h
        ChiefEngineer.h
        ChiefEngineerFactory.cpp
        ChiefEngineerFactory.h
        Command.h
        Commander.cpp
        Commander.h
        CommanderFactory.cpp
        CommanderFactory.h
        Comms.h
        CommsFactory.cpp
        CommsFactory.h
        CrewFactory.cpp
        CrewFactory.h
        CrewMember.cpp
        CrewMember.h
        Doctor.h
        DoctorFactory.cpp
        DoctorFactory.h
        Engineers.h
        EngineersFactory.cpp
        EngineersFactory.h
        Exploration.cpp
        Exploration.h
        ExplorationFactory.cpp
        ExplorationFactory.h
        Fighter.h
        FighterTransporter.cpp
        FighterTransporter.h
        Frigates.h
        FrigatesFactory.cpp
        FrigatesFactory.h
        InvadeCommand.cpp
        InvadeCommand.h
        Iterator.cpp
        Iterator.h
        LogIterator.cpp
        LogIterator.h
        main.cpp
        Navigator.cpp
        Navigator.h
        NavigatorFactory.cpp
        NavigatorFactory.h
        Passenger.cpp
        Passenger.h
        PassengerFactory.cpp
        PassengerFactory.h
        Person.cpp
        Person.h
        PersonFactory.h
        PFighterFactory.cpp
        PFighterFactory.h
        Spaceship.cpp
        Spaceship.h
        SpaceshipCreator.cpp
        SpaceshipCreator.h
        SpaceshipFactory.h
        SpaceshipTransporter.cpp
        SpaceshipTransporter.h
        SpaceStation.cpp
        SpaceStation.h
        SpaceStationFactory.cpp
        SpaceStationFactory.h
        SPFighterFactory.h
        SPTransporterFactory.cpp
        SPTransporterFactory.h Frigates.cpp Fighter.cpp ProblemHandler.cpp ProblemHandler.h DoctorHandler.cpp DoctorHandler.h Doctor.cpp Engineers.cpp FighterHandler.cpp FighterHandler.h EngineerHandler.cpp EngineerHandler.h)
