cmake_minimum_required(VERSION 3.14)
project(GeekHubProject)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(GeekHubProject
        AbstractExpression.h
        AirconditioningDecorator.cpp
        AirconditioningDecorator.h
        Battleship.cpp
        Battleship.h
        BattleshipsFactory.cpp
        BattleshipsFactory.h
        Bridge.cpp
        Bridge.h
        Captain.cpp
        Captain.h
        CaptainFactory.cpp
        CaptainFactory.h
        Caretaker.cpp
        Caretaker.h
        ChiefEngineer.h
        ChiefEngineerFactory.cpp
        ChiefEngineerFactory.h
        Command.h
        Commander.cpp
        Commander.h
        CommanderFactory.cpp
        CommanderFactory.h
        Comms.h
        CommsFactory.cpp
        CommsFactory.h
        Component.h
        ConcreteMediator.cpp
        ConcreteMediator.h
        ConstantExpression.cpp
        ConstantExpression.h
        Context.cpp
        Context.h
        CrewFactory.cpp
        CrewFactory.h
        CrewMember.cpp
        CrewMember.h
        Critter.cpp
        Critter.h
        Decorator.cpp
        Decorator.h
        Doctor.cpp
        Doctor.h
        DoctorFactory.cpp
        DoctorFactory.h
        DoctorHandler.cpp
        DoctorHandler.h
        EmptyFuelState.cpp
        EmptyFuelState.h
        EngineerHandler.cpp
        EngineerHandler.h
        Engineers.cpp
        Engineers.h
        EngineersFactory.cpp
        EngineersFactory.h
        Exploration.cpp
        Exploration.h
        ExplorationFactory.cpp
        ExplorationFactory.h
        Fighter.cpp
        Fighter.h
        FighterHandler.cpp
        FighterHandler.h
        FighterTransporter.cpp
        FighterTransporter.h
        Frigates.cpp
        Frigates.h
        FrigatesFactory.cpp
        FrigatesFactory.h
        FullFuelState.cpp
        FullFuelState.h
        InvadeCommand.cpp
        InvadeCommand.h
        Iterator.cpp
        Iterator.h
        LogIterator.cpp
        LogIterator.h
        main.cpp
        Mediator.cpp
        Mediator.h
        Memento.cpp
        Memento.h
        MidFuelState.cpp
        MidFuelState.h
        Navigator.cpp
        Navigator.h
        NavigatorFactory.cpp
        NavigatorFactory.h
        Passenger.cpp
        Passenger.h
        PassengerFactory.cpp
        PassengerFactory.h
        Person.cpp
        Person.h
        PersonFactory.h
        PFighterFactory.cpp
        PFighterFactory.h
        PremiumSoftwareDecorator.cpp
        PremiumSoftwareDecorator.h
        ProblemHandler.cpp
        ProblemHandler.h
        SickBay.cpp
        SickBay.h
        SleepingQuarters.cpp
        SleepingQuarters.h
        Spaceship.cpp
        Spaceship.h
        SpaceshipCreator.cpp
        SpaceshipCreator.h
        SpaceshipFactory.h
        SpaceshipTransporter.cpp
        SpaceshipTransporter.h
        SpaceStation.cpp
        SpaceStation.h
        SpaceStationFactory.cpp
        SpaceStationFactory.h
        SPFighterFactory.h
        SPTransporterFactory.cpp
        SPTransporterFactory.h
        State.cpp
        State.h
        testCritters.cpp
        TVDecorator.cpp
        TVDecorator.h
        VariableExpression.cpp
        VariableExpression.h)
